# Etherlab_EtherCAT_Master

./: .gitignore  .hgtags  0001-Port-to-kernel-v5.patch  CHANGELOG.md  INSTALL  Makefile  Makefile.am  NEWS  README  README.sncn_release  configure.ac  install.sh  patch.sh
devices/: Makefile.am  generic.c
devices/ccat/: Kbuild.in  Makefile.am  gpio.c  module.c  module.h  netdev.c
devices/e1000/: Makefile.am
devices/e1000e/: 82571-3.18-ethercat.c  Makefile.am  ethtool-3.18-ethercat.c  ich8lan-3.18-ethercat.c  mac-3.18-ethercat.c  netdev-3.18-ethercat.c
documentation/: ethercat_doc.tex
examples/mini/: mini.c
examples/simple_somanet_pdo_sdo/: Makefile.am  main.c
examples/user/: main.c
include/: ecrt.h
lib/: Makefile.am  master.c  sdo_request.c  slave_config.c
libethercat_wrapper/: CHANGELOG.md  Makefile.am  README  Version
libethercat_wrapper/include/: commons.h  ethercat_wrapper.h  ethercat_wrapper_slave.h  slave.h
libethercat_wrapper/src/: commons.h  ethercat_wrapper.c  slave.c  slave.h  testlib.c
master/: cdev.c  ethernet.c  fsm_change.c  fsm_coe.c  fsm_coe.h  fsm_eoe.c  fsm_master.c  fsm_sii.c  fsm_slave.c  fsm_slave_config.c  fsm_soe.c  globals.h  ioctl.c  ioctl.h  master.c  module.c  sdo.c  slave.c  slave.h  slave_config.c
patch/: ethernet.c.patch  fsm_soe.c.patch  generic.c.patch  generic.c.txt
sncn_installer/: Makefile  Makefile.template  install.sh
synapticon/: 0001-Fix-wrong-user-name-field.patch  CHANGELOG.md  README.md  apply_patches.sh  install.sh  synapticon_patches.txt  unofficial_patch_set.txt
tool/: Makefile.am  main.cpp
(+28 files in other folders)
